Examples/CPP_GeometryKernel/Engine/engine.h



//
//		SetNameOfClass                              (http://rdf.bg/gkdoc/CP64/SetNameOfClass.html)
//				int64_t				owlClass							IN
//				const char			* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the class, if no error it returns 0.
//	In case class does not exist it returns 1, when name cannot be updated 2.
//
int64_t		DECL STDC	SetNameOfClass(
									int64_t				owlClass,
									const char			* name
								);


//
//		SetNameOfClassW                             (http://rdf.bg/gkdoc/CP64/SetNameOfClassW.html)
//				int64_t				owlClass							IN
//				const wchar_t		* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the class, if no error it returns 0.
//	In case class does not exist it returns 1, when name cannot be updated 2.
//
int64_t		DECL STDC	SetNameOfClassW(
									int64_t				owlClass,
									const wchar_t		* name
								);


//
//		SetNameOfClassEx                            (http://rdf.bg/gkdoc/CP64/SetNameOfClassEx.html)
//				int64_t				model								IN
//				int64_t				owlClass							IN
//				const char			* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the class, if no error it returns 0.
//	In case class does not exist it returns 1, when name cannot be updated 2.
//
//	This call has the same behavior as SetNameOfClass, however needs to be
//	used in case classes are exchanged as a successive series of integers.
//
int64_t		DECL STDC	SetNameOfClassEx(
									int64_t				model,
									int64_t				owlClass,
									const char			* name
								);


//
//		SetNameOfClassWEx                           (http://rdf.bg/gkdoc/CP64/SetNameOfClassWEx.html)
//				int64_t				model								IN
//				int64_t				owlClass							IN
//				const wchar_t		* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the class, if no error it returns 0.
//	In case class does not exist it returns 1, when name cannot be updated 2.
//
//	This call has the same behavior as SetNameOfClassW, however needs to be
//	used in case classes are exchanged as a successive series of integers.
//
int64_t		DECL STDC	SetNameOfClassWEx(
									int64_t				model,
									int64_t				owlClass,
									const wchar_t		* name
								);


//
//		GetNameOfClass                              (http://rdf.bg/gkdoc/CP64/GetNameOfClass.html)
//				int64_t				owlClass							IN
//				char				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the class, if the class does not exist it returns nullptr.
//
void		DECL STDC	GetNameOfClass(
									int64_t				owlClass,
									char				** name
								);


//
//		GetNameOfClassW                             (http://rdf.bg/gkdoc/CP64/GetNameOfClassW.html)
//				int64_t				owlClass							IN
//				wchar_t				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the class, if the class does not exist it returns nullptr.
//
void		DECL STDC	GetNameOfClassW(
									int64_t				owlClass,
									wchar_t				** name
								);


//
//		GetNameOfClassEx                            (http://rdf.bg/gkdoc/CP64/GetNameOfClassEx.html)
//				int64_t				model								IN
//				int64_t				owlClass							IN
//				char				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the class, if the class does not exist it returns nullptr.
//
//	This call has the same behavior as GetNameOfClass, however needs to be
//	used in case properties are exchanged as a successive series of integers.
//
void		DECL STDC	GetNameOfClassEx(
									int64_t				model,
									int64_t				owlClass,
									char				** name
								);


//
//		GetNameOfClassWEx                           (http://rdf.bg/gkdoc/CP64/GetNameOfClassWEx.html)
//				int64_t				model								IN
//				int64_t				owlClass							IN
//				wchar_t				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the class, if the class does not exist it returns nullptr.
//
//	This call has the same behavior as GetNameOfClassW, however needs to be
//	used in case classes are exchanged as a successive series of integers.
//
void		DECL STDC	GetNameOfClassWEx(
									int64_t				model,
									int64_t				owlClass,
									wchar_t				** name
								);


//
//		SetClassPropertyCardinalityRestriction      (http://rdf.bg/gkdoc/CP64/SetClassPropertyCardinalityRestriction.html)
//				int64_t				owlClass							IN
//				int64_t				rdfProperty							IN
//				int64_t				minCard								IN
//				int64_t				maxCard								IN
//
//				void				returns
//
//	This function sets the minCard and maxCard of a certain property in the context of a class.
//	The cardinality of a property in an instance has to be between minCard and maxCard (as well 
//	as within the cardinality restrictions as given by the property in context of any of its
//	(indirect) parent classes).
//	If undefined minCard and/or maxCard will be of value -1, this means
//	for minCard that it is 0 and for maxCard it means infinity.
//
void		DECL STDC	SetClassPropertyCardinalityRestriction(
									int64_t				owlClass,
									int64_t				rdfProperty,
									int64_t				minCard,
									int64_t				maxCard
								);


//
//		SetClassPropertyCardinalityRestrictionEx    (http://rdf.bg/gkdoc/CP64/SetClassPropertyCardinalityRestrictionEx.html)
//				int64_t				model								IN
//				int64_t				owlClass							IN
//				int64_t				rdfProperty							IN
//				int64_t				minCard								IN
//				int64_t				maxCard								IN
//
//				void				returns
//
//	This function sets the minCard and maxCard of a certain property in the context of a class.
//	The cardinality of a property in an instance has to be between minCard and maxCard (as well 
//	as within the cardinality restrictions as given by the property in context of any of its
//	(indirect) parent classes).
//	If undefined minCard and/or maxCard will be of value -1, this means
//	for minCard that it is 0 and for maxCard it means infinity.
//
//	This call has the same behavior as SetClassPropertyCardinalityRestriction, however needs to be
//	used in case classes or properties are exchanged as a successive series of integers.
//
void		DECL STDC	SetClassPropertyCardinalityRestrictionEx(
									int64_t				model,
									int64_t				owlClass,
									int64_t				rdfProperty,
									int64_t				minCard,
									int64_t				maxCard
								);


//
//		GetClassPropertyCardinalityRestriction      (http://rdf.bg/gkdoc/CP64/GetClassPropertyCardinalityRestriction.html)
//				int64_t				owlClass							IN
//				int64_t				rdfProperty							IN
//				int64_t				* minCard							IN / OUT
//				int64_t				* maxCard							IN / OUT
//
//				void				returns
//
//	This function returns the minCard and maxCard of a certain
//	property in the context of a class. The cardinality of a property in 
//	an instance has to be between minCard and maxCard (as well as within the cardinality restrictions
//	as given by the property in context of any of its (indirect) parent classes).
//	If undefined minCard and/or maxCard will be of value -1, this means
//	for minCard that it is 0 and for maxCard it means infinity.
//
//	Note: this function does not return inherited restrictions. The example shows how to retrieve
//	this knowledge, as it is derived knowledge the call that used to be available is removed.
//
void		DECL STDC	GetClassPropertyCardinalityRestriction(
									int64_t				owlClass,
									int64_t				rdfProperty,
									int64_t				* minCard,
									int64_t				* maxCard
								);


//
//		GetClassPropertyCardinalityRestrictionEx    (http://rdf.bg/gkdoc/CP64/GetClassPropertyCardinalityRestrictionEx.html)
//				int64_t				model								IN
//				int64_t				owlClass							IN
//				int64_t				rdfProperty							IN
//				int64_t				* minCard							IN / OUT
//				int64_t				* maxCard							IN / OUT
//
//				void				returns
//
//	This function returns the minCard and maxCard of a certain
//	property in the context of a class. The cardinality of a property in 
//	an instance has to be between minCard and maxCard (as well as within the cardinality restrictions
//	as given by the property in context of any of its (indirect) parent classes).
//	If undefined minCard and/or maxCard will be of value -1, this means
//	for minCard that it is 0 and for maxCard it means infinity.
//
//	This call has the same behavior as GetClassPropertyCardinalityRestriction, however needs to be
//	used in case classes or properties are exchanged as a successive series of integers.
//
//	Note: this function does not return inherited restrictions. The example shows how to retrieve
//	this knowledge, as it is derived knowledge the call that used to be available is removed.
//
void		DECL STDC	GetClassPropertyCardinalityRestrictionEx(
									int64_t				model,
									int64_t				owlClass,
									int64_t				rdfProperty,
									int64_t				* minCard,
									int64_t				* maxCard
								);


//
//		GetGeometryClass                            (http://rdf.bg/gkdoc/CP64/GetGeometryClass.html)
//				int64_t				owlClass							IN
//
//				int64_t				returns								OUT
//
//	Returns non-zero if the owlClass is a geometry type. This call will return the input class
//	for all classes initially available. It will return as well non-for all classes created by the
//	user or loaded / imported through a model that (indirectly) inherit one of the
//	original classes available. in this case it returns the original available class
//	it inherits the behavior from.
//
int64_t		DECL STDC	GetGeometryClass(
									int64_t				owlClass
								);


//
//		GetGeometryClassEx                          (http://rdf.bg/gkdoc/CP64/GetGeometryClassEx.html)
//				int64_t				model								IN
//				int64_t				owlClass							IN
//
//				int64_t				returns								OUT
//
//	Returns non-zero if the owlClass is a geometry type. This call will return the input class
//	for all classes initially available. It will return as well non-for all classes created by the
//	user or loaded / imported through a model that (indirectly) inherit one of the
//	original classes available. in this case it returns the original available class
//	it inherits the behavior from.
//
//	This call has the same behavior as GetGeometryClass, however needs to be
//	used in case classes are exchanged as a successive series of integers.
//
int64_t		DECL STDC	GetGeometryClassEx(
									int64_t				model,
									int64_t				owlClass
								);


//
//		IsClass                                     (http://rdf.bg/gkdoc/CP64/IsClass.html)
//				int64_t				owlClass							IN
//
//				bool				returns								OUT
//
//	Returns true if the argument owlClass is an actual active class in an active model. It returns false in all other cases,
//	i.e. this could mean the model is already closed, the class is inactive or removed or the session is closed.
//	It could also mean it represents a handle to another Thing, for example a property, instance or model.
//
bool		DECL STDC	IsClass(
									int64_t				owlClass
								);


//
//  Design Tree Properties API Calls
//

//
//		CreateProperty                              (http://rdf.bg/gkdoc/CP64/CreateProperty.html)
//				int64_t				model								IN
//				int64_t				rdfPropertyType						IN
//				const char			* name								IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to an on the fly created property.
//	If the model input is zero or not a model handle 0 will be returned,
//
int64_t		DECL STDC	CreateProperty(
									int64_t				model,
									int64_t				rdfPropertyType,
									const char			* name
								);


//
//		CreatePropertyW                             (http://rdf.bg/gkdoc/CP64/CreatePropertyW.html)
//				int64_t				model								IN
//				int64_t				rdfPropertyType						IN
//				const wchar_t		* name								IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to an on the fly created property.
//	If the model input is zero or not a model handle 0 will be returned,
//
int64_t		DECL STDC	CreatePropertyW(
									int64_t				model,
									int64_t				rdfPropertyType,
									const wchar_t		* name
								);